--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,6 +1,6 @@
 {% if site.google_analytics %}
 <!-- Google Analytics -->
-<script>
+<!-- <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
       (i[r].q = i[r].q || []).push(arguments)
@@ -9,6 +9,17 @@
   })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
   ga('create', '{{ site.google_analytics }}', 'auto');
   ga('send', 'pageview');
-</script>
+</script> -->
 <!-- End Google Analytics -->
+
+<!-- google ananlytics hardcoded tag from g site -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3R9XKHN48Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3R9XKHN48Z');
+</script>
 {% endif %}
