--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,4 @@
-{% if site.google_analytics %}
+<!-- {% if site.google_analytics %} -->
 <!-- Google Analytics -->
 <!-- <script>
   (function (i, s, o, g, r, a, m) {
@@ -22,4 +22,4 @@
 
   gtag('config', 'G-3R9XKHN48Z');
 </script>
-{% endif %}
+<!-- {% endif %} -->
