--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,8 +38,7 @@
 
       </p>
       {% unless site.remove-ads %}<p class="theme-by text-muted">
-        Powered by
-        The Force
+        Powered by Beautiful Jekyll
       </p>{% endunless %}
       </div>
     </div>
